blue-green-nginx/blue-green-deploy.yaml
##  O objeto Rollout é uma Custom Resource Definition (CRD) que substitui o objeto Deployment nativo do Kubernetes quando precisamos de estratégias avançadas.
## No Rollout, definimos a estratégia (strategy) como blueGreen e referenciamos os dois serviços que acabamos de criar.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-color-rollout
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-color
  template:
    metadata:
      labels:
        app: web-color
        version: blue
    spec:
      containers:
      - name: app-container
        # Imagem com a versão blue - green
        image: bernardolankheet/lab-blue-green:green
        ports:
        - containerPort: 80
