blue-green-nginx/deploy-bluegreen.yaml
##  O objeto Rollout é uma Custom Resource Definition (CRD) que substitui o objeto Deployment nativo do Kubernetes quando precisamos de estratégias avançadas.
## No Rollout, definimos a estratégia (strategy) como blueGreen e referenciamos os dois serviços que acabamos de criar.
apiVersion: apps/v1
kind: Rollout
metadata:
  name: web-color-rollout
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-color
  template:
    metadata:
      labels:
        app: web-color
        version: blue
    spec:
      containers:
      - name: app-container-blue
        # Imagem com a versão blue ou green
        image: bernardolankheet/lab-blue-green:blue
        ports:
        - containerPort: 80
