blue-green-nginx/bluegreen-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-color-active
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
spec:
  ingressClassName: nginx
  rules:
  - host: app.bernardolankheet.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-color-active
            port:
              number: 80
